--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	/* border: 1px dashed black; */
+	/* overflow: auto; */
 }
 
 /* *UTILS */
@@ -26,14 +28,16 @@ body {
 
 img {
 	max-width: 100%;
-	display: inline-block;
+	display: block;
 }
 
 a {
 	text-decoration: none;
 	color: inherit;
 }
-
+a:hover {
+	color: white;
+}
 ul {
 	list-style-type: none;
 }
@@ -42,42 +46,377 @@ svg {
 	fill: currentColor;
 }
 
+/* *RESPONSIVE UTILS */
+.d-none {
+	display: none;
+}
+.d-block {
+	display: block;
+}
+.d-inline-block {
+	display: inline-block;
+}
+
 /* *WRAPPER */
 .wrapper {
 	display: flex;
 	height: calc(100vh - 80px);
 }
 
-/* *HEADER */
-header {
-	background-color: rgb(158, 0, 0);
+/* *SIDEBAR */
+.sidebar {
+	background-color: black;
 	height: 100%;
-	width: 20%;
+	width: 50px;
+	color: grey;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	font-size: 1.3rem;
+}
+.sidebar ul svg {
+	width: 23px;
+}
+
+.sidebar-top li {
+	margin-top: 15px;
+}
+.sidebar-top {
+	margin-top: 10px;
+}
+.sidebar-bottom {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 10px;
+	width: 100%;
+}
+
+.sidebar a {
+	text-align: center;
+}
+
+.sidebar ul li.active {
+	color: white;
+}
+.sidebar .sidebar-bottom svg {
+	width: 23px;
+}
+
+.sidebar .sidebar-bottom .img-user svg {
+	width: 30px;
+	background-color: grey;
+	color: white;
+	aspect-ratio: 1;
+	border-radius: 50%;
+}
+
+.sidebar-playlist-container {
+	padding-left: 20px;
+	font-size: 0.9rem;
+	font-weight: 600;
+}
+.sidebar-playlist-container h3 {
+	margin-top: 20px;
 	color: white;
 }
 
-.main-header {
-	height: var(--main-header-height);
+.sidebar-playlist-container .create-playlist-container:hover,
+.sidebar-playlist-container li:hover {
 	color: white;
-	background-image: url(../img/output-onlinepngtools.png);
 }
 
-main .main-body {
-	overflow-y: auto;
-	background-color: rgb(137, 0, 137);
+.sidebar-playlist-container .create-playlist-container:hover .plusicon {
+	background-color: white;
+}
+.sidebar-playlist-container .plusicon {
+	font-size: 1rem;
+	font-weight: 700;
+	color: black;
+	background-color: grey;
+	margin-right: 10px;
+	height: 30px;
+	text-align: center;
+	aspect-ratio: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.create-playlist-container {
+	display: flex;
+	align-items: center;
+	margin-block: 10px;
+}
+
+.sidebar-playlist-container ul {
+	font-size: 0.8rem;
 }
 
 /* *MAIN */
 main {
-	background-color: rgb(0, 0, 140);
+	background-color: #141922;
 	height: 100%;
 	width: 100%;
 	color: white;
+	display: flex;
+	flex-direction: column;
+}
+main .main-body {
+	padding-inline: 23px;
+	overflow: auto;
+}
+.main-header {
+	height: var(--main-header-height);
+	color: white;
+	background-image: url(../img/output-onlinepngtools.png);
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	height: 100px;
 }
 
+.main-header a.btn {
+	border: 1px solid currentColor;
+	padding: 10px 50px;
+	border-radius: 20px;
+	font-size: 0.7rem;
+	font-weight: 600;
+	margin-right: 20px;
+	transition: all 0.05s linear;
+}
+.main-header a.btn:hover {
+	font-size: 0.8rem;
+}
+main .main-body ul {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	text-align: center;
+	font-size: 0.8rem;
+	gap: 15px;
+	margin-top: 20px;
+	font-weight: 600;
+	color: grey;
+}
+
+main .main-body ul li.active {
+	border-bottom: 2px solid greenyellow;
+}
+
+/* *CARD CONTAINER */
+main .main-body .cards-container {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+main .main-body .cards-container .card {
+	position: relative;
+	text-align: center;
+	width: 48%;
+	margin-bottom: 20px;
+}
+
+main .main-body .cards-container .card img:first-child {
+	position: absolute;
+	opacity: 0;
+	transition: all 0.2s linear;
+}
+main .main-body .cards-container .card img:first-child:hover {
+	opacity: 100;
+}
+main .main-body .cards-container .card .card-subtitle {
+	font-size: 0.7rem;
+	font-weight: 600;
+	color: grey;
+}
+
+main .main-body h2 {
+	margin-block: 30px 20px;
+	font-size: 1.3rem;
+}
 /* *FOOTER */
 footer {
-	background-color: rgb(0, 99, 0);
+	background-color: #282828;
 	height: var(--footer-height);
 	color: white;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+	gap: 20px;
+}
+/* *LEFT CONTAINER */
+.left-container {
+	width: 33%;
+	display: flex;
+	align-items: center;
+	gap: 5px;
+}
+
+footer img {
+	max-width: 40px;
+}
+footer .left-container .middle {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+	margin-right: 20px;
+}
+
+footer .left-container .middle .song-title {
+	font-size: 0.7rem;
+	font-weight: 700;
+}
+
+footer .left-container .middle .album {
+	font-size: 0.5rem;
+}
+
+footer .left-container .right {
+	display: flex;
+	font-size: 1rem;
+	flex-direction: column;
+	height: 100%;
+	color: grey;
+	gap: 5px;
+}
+
+/* *MIDDLE CONTAINER */
+footer .middle-container {
+	width: 33%;
+}
+footer .middle-container .top {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+footer .middle-container .top .fa-circle-play {
+	font-size: 1.7rem;
+}
+footer .middle-container .bottom {
+	font-size: 0.7rem;
+	font-weight: 600;
+	display: flex;
+	margin-top: 10px;
+	justify-content: space-between;
+	gap: 10px;
+	align-items: center;
+}
+.progress-bar {
+	width: 100%;
+	background-color: grey;
+	border-radius: 5px;
+}
+.progress {
+	width: 30%;
+	border: 2px solid white;
+	border-radius: 5px;
+}
+
+/* *RIGHT CONTAINER */
+footer .right-container {
+	width: 33%;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	gap: 10px;
+	font-size: 0.8rem;
+}
+
+footer .right-container .progress-bar {
+	width: 40%;
+}
+
+/* ^SMALL DISPLAY */
+@media screen and (min-width: 639px) {
+	.sidebar {
+		width: 350px;
+		align-items: flex-start;
+	}
+
+	.sidebar ul span {
+		display: inline-block;
+		font-size: 0.8rem;
+		font-weight: 600;
+	}
+
+	.sidebar ul.nav li,
+	.sidebar figure {
+		padding-left: 20px;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+	}
+
+	.sidebar ul li a {
+		display: flex;
+		align-items: center;
+		gap: 10px;
+	}
+
+	.sidebar ul li.active {
+		border-left: 2px solid greenyellow;
+	}
+
+	.sidebar .sm-logo {
+		display: none;
+	}
+	.sidebar .lg-logo {
+		display: inline-block;
+		width: 60%;
+	}
+
+	.sidebar figure img {
+		margin-block: 10px;
+	}
+
+	.sidebar ul svg {
+		width: 30px;
+	}
+
+	.sidebar-playlist-container {
+		display: block;
+	}
+
+	.sidebar hr {
+		display: block;
+		color: grey;
+		width: 100%;
+	}
+
+	.sidebar-bottom {
+		padding-inline: 20px;
+		gap: 10px;
+	}
+
+	.sidebar-bottom .install {
+		display: flex;
+		gap: 10px;
+		align-items: center;
+	}
+
+	.sidebar-bottom .install span {
+		display: inline-block;
+
+		font-size: 0.8rem;
+	}
+	.sidebar-bottom .img-user {
+		display: flex;
+		gap: 10px;
+		align-items: center;
+	}
+	.sidebar-bottom .img-user span {
+		color: white;
+		font-weight: 600;
+		font-size: 1rem;
+		display: inline-block;
+	}
+}
+
+/* ^MEDIUM DISPLAY */
+@media screen and (min-width: 878px) {
 }
